# messages-api-bot

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
bot/: Procfile  bot.py  logger.py  requirements.txt
bot/bot_app/: bot.py
messages_api/: asgi.py  settings.py  test_container.py  urls.py  wsgi.py
messages_api/fixtures/: users.json
messages_api/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
messages_api/users/migrations/: 0001_initial.py  0002_alter_user_email.py
messages_api/users/tests/: test_models.py  test_views.py
messages_api/users_messages/: admin.py  apps.py  bot.py  models.py  serializers.py  urls.py  views.py
messages_api/users_messages/migrations/: 0001_initial.py  0002_tgtoken_chat_id.py
messages_api/users_messages/tests/: test_models.py  test_views.py
